Fix border input on mobile

--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ main h2 {
     #userName {
         border-top-right-radius: 7px;
         border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
         margin-top: 10px;
         margin-left: 0;
     }
